--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -1,19 +1,17 @@
-# .github/workflows/version.yml
-name: Git Version
+name: Auto.Tag
 
-on:
-  push:
-    branches:
-      - master
+on: 
+- push
 
 jobs:
-  lint:
+  tag:
     runs-on: ubuntu-latest
-    steps:
-      - name: Checkout Code
-        uses: actions/checkout@v2.4        with:
-          ref: ${{ github.head_ref }}   # checkout the correct branch name
-          fetch-depth: 0                # fetch the whole repo history
-
-      - name: Git Version
-        uses: codacy/git-version@2.2.0
+    strategy:
+      matrix:
+        node-version: 
+        - 12
+    steps: 
+    - uses: phish108/autotag-action@1.1.50
+      with:
+        branch: master
+        github-token: ${{ secrets.GITHUB_TOKEN}}
