--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,7 +28,12 @@ python = "^3.8"
 Django = ">= 3.2"
 
 [tool.poetry.dev-dependencies]
+python-semantic-release = "^7.31.2"
+
+[tool.semantic_release]
+version_variable = "pyproject.toml:version"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
