--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,11 @@ Django = ">= 3.2"
 
 [tool.poetry.dev-dependencies]
 python-semantic-release = "^7.31.2"
+black = "^23.1.0"
+djlint = "^1.19.16"
+isort = "^5.12.0"
+pre-commit = "^3.2.1"
+
 
 [tool.semantic_release]
 version_variable = "pyproject.toml:version"
